--- a/example/index.html
+++ b/example/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <div class='container'>
-      <svg id='whiteboard'></svg>
+      <svg id='whiteboard' height='100%' width='100%'></svg>
     </div>
 
     <script src='bundle.js'></script>
