--- a/example/index.html
+++ b/example/index.html
@@ -47,11 +47,22 @@
     </select>
     Fill
     <select onchange='fill(event)'>
+      <option value='none'>None</option>
       <option value='#BADA55'>#BADA55</option>
       <option value='red'>Red</option>
-      <option value='none'>None</option>
+      <option value='purple'>Purple</option>
       <option value='orange'>Orange</option>
     </select>
+    Stroke
+    <select onchange='stroke(event)'>
+      <option value='#BADA55'>#BADA55</option>
+      <option value='red'>Red</option>
+      <option value='purple'>Purple</option>
+      <option value='orange'>Orange</option>
+    </select>
+
+    <input type='button' value='<' onclick='undo()'>
+    <input type='button' value='>' onclick='redo()'>
 
     <div class='container'>
       <svg id='whiteboard' height='100%' width='100%'></svg>
