--- a/example/index.html
+++ b/example/index.html
@@ -14,11 +14,11 @@
         max-width: 100%;
         max-height: 100%;
         width: 1200px;
-        height: 560px;
         border: 1px solid #ccc;
       }
       .container #whiteboard {
         background-color: #fff;
+        display: block;
       }
 
       .svg_select_points_rot {
@@ -54,7 +54,7 @@
     <input type='button' value='>' onclick='redo()'>
 
     <div class='container'>
-      <svg id='whiteboard' height='100%' width='100%'></svg>
+      <svg id='whiteboard'></svg>
     </div>
 
     <script src='bundle.js'></script>
